# lablab-o1

./: .cursorrules  .gitignore  chatlog.md  scratchpad.md
cellium/: Cargo.toml
cellium/src/: errors.rs  lib.rs  main.rs
cellium/src/api/: mod.rs
cellium/src/data_ingestor/: mod.rs
cellium/src/generator/: mod.rs
cellium/src/prompt_template/: mod.rs
cellium/src/state_machine/: mod.rs
cellium/tests/: api_tests.rs
docs/: agents.md  automated_selector_injector.md  reference_project.txt
