[package]
name = "cellium"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
regex = "1.5"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
thiserror = "1.0"
html5ever = "0.25.2"
scraper = "0.13.0"
rustpython-parser = "0.1.2"
swc_ecma_parser = "0.75.0" # For JavaScript/TypeScript parsing
tree-sitter = "0.20.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
warp = "0.3"
