[package]
name = "cellium"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls", "stream"] }
regex = "1.7"
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4"
thiserror = "1.0"
syn = "2.0.79"

# Updated versions:
html5ever = "0.29.0"
scraper = "0.20.0"
rustpython-parser = "0.4.0"
swc_ecma_parser = "0.152.1" # Updated to the latest version
tree-sitter = "0.24.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
warp = "0.3"
