[package]
name = "cellium"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
regex = "1.7"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
thiserror = "1.0"

# Updated versions:
html5ever = "0.26.0"
scraper = "0.14.0"
rustpython_parser = "0.4.0"
swc_ecma_parser = "0.118.0" # Updated to the latest version
tree-sitter = "0.20.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
warp = "0.3"

[dependencies.syn]
version = "2.0"
features = ["full", "derive", "parsing", "printing"]

[patch.crates-io]
syn = { version = "2.0.25", features = ["full", "derive", "parsing", "printing"] }

